--- a/SlimeCore.csproj
+++ b/SlimeCore.csproj
@@ -2,13 +2,19 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SlimeApi">
+      <HintPath>..\SlimeApi\SlimeApi\bin\Debug\net7.0\SlimeApi.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
